# LIG_DNA_GUI

./: .gitignore  BroadcastControl.MevaDemo.slnx  BroadcastControl.slnx  LOCAL_TESTING.md  PROJECT_FILE_SUMMARY.txt  README.md
BroadcastControl.App/: App.xaml  App.xaml.cs  AssemblyInfo.cs  BroadcastControl.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
BroadcastControl.Benchmarks/: BroadcastControl.Benchmarks.csproj  Program.cs
BroadcastControl.MevaDemo.App/: App.xaml.cs  BroadcastControl.MevaDemo.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
BroadcastControl.UdpBenchmark/: Program.cs
JetsonThor.Bridge/: CMakeLists.txt  README.md
JetsonThor.Bridge/src/: main.cpp
JetsonThor.CameraYoloDocker/: Dockerfile  README.md  run_live_camera_yolo.sh
JetsonThor.EoTopicYoloDocker/: Dockerfile  README.md  run_eo_topic_yolo.sh
JetsonThor.HelloWorldBridge/: CMakeLists.txt  README.md
JetsonThor.MevaVideoDemoDocker/: README.md
JetsonThor.MevaYoloDocker/: Dockerfile  Dockerfile.gui_camera  README.md  run_camera_udp_bridge.sh  run_gui_camera_yolo_node.sh  run_meva_yolo_demo.sh
JetsonThor.RosCameraBridge/: Dockerfile  README.md  run_camera_udp_bridge.sh
JetsonThor.RosIrBridge/: README.md  run_ir_gui_bridge.sh
JetsonThor.WebcamTopicYoloDocker/: Dockerfile  README.md  run_webcam_topic_yolo.sh  run_webcam_udp_yolo.sh
LaptopWebcam.RosTopicPublisher/: README.md  run_webcam_udp_sender.cmd  webcam_ros_topic_publisher.py  webcam_udp_sender.py
docs/: CAMERA_UDP_BRIDGE_GUIDE.md  CURRENT_VIDEO_AND_DETECTION_FLOW.md  EO_CAMERA_TO_JETSON_YOLO_EXPERIMENT.md  (+8 more)
(+34 files in other folders)
